fixing the nav on mobile

--- a/src/components/atoms/_navigation.scss
+++ b/src/components/atoms/_navigation.scss
@@ -14,15 +14,12 @@
   z-index: 100;
   top: 0;
   position: absolute;
-  transition: transform 1000ms ease-in;
+  transform: translate3d(100%,0,0);
+  transition: transform 1000ms ease;
   height:100%;
 
   &__active {
-    transform: translateX(0);
-  }
-
-  &__inactive {
-    transform: translateX(100%);
+    transform: translate3d(0,0,0);
   }
   
   &__inner {
